syntax = "proto3";

option csharp_namespace = "cart";

service GrpcCart{
  rpc GetAllCarts (GetAllCartsRequest) returns (CartResponse);
}

message GetAllCartsRequest {}

message CartResponse {
  repeated GrpcCartModel carts = 1;
}

message GrpcCartModel {
  int32 id = 1;
  int32 buyerId = 2;
  repeated GrpcCartItemModel items = 3;
}

message GrpcCartItemModel {
  int32 id = 1;
  int32 productId = 2;
  string productName = 3;
  DecimalValue unitPrice = 4;
  int32 quantity = 5;
  string pictureUrl = 6;
}

package CustomTypes;

message DecimalValue {   
    int64 units = 1;    
    sfixed32 nanos = 2;
}